update send mail

--- a/.env
+++ b/.env
@@ -1,3 +1,17 @@
 PORT_SERVER=3000
 BCRYPT_HASH=10
 SESSION_SECRET=linh
+
+
+APP_NAME=MYSQL_NODEJS
+APP_URL=http://localhost:3000
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=trilinh212@gmail.com
+MAIL_PASSWORD=mdcg ngkw ywzv efpy
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=trilinh212@gmail.com
+MAIL_FROM_NAME="{APP_NAME}"
