--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "start": "^5.1.0"
   }
